<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:paddingBottom="100dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:textStyle="bold|italic"
        android:textColor="#ff2431ff"
        android:textSize="50sp"
        android:singleLine="true"
        android:typeface="normal"
        android:gravity="center_horizontal"
        android:id="@+id/textView_Title_Main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/hint"
        android:singleLine="false"
        android:layout_weight="1"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textview_hint"
        android:gravity="center_vertical" />

    <Button
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/InventoryButton"
        android:text="@string/manage_inventory"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/SalesButton"
        android:text="@string/sales"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/RepairsButton"
        android:text="@string/Repairs"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />


</LinearLayout>